--- a/gb/19/12/30/n11753876.md
+++ b/gb/19/12/30/n11753876.md
@@ -1,22 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/owsjff3260/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/owsjff3260/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/owsjff3260/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/owsjff3260/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/owsjff3260/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/owsjff3260/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/owsjff3260/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/owsjff3260/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/owsjff3260/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/owsjff3260/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/owsjff3260/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/owsjff3260/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/owsjff3260/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/owsjff3260/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/owsjff3260/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/owsjff3260/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/owsjff3260/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/owsjff3260/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/owsjff3260/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/owsjff3260/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/owsjff3260/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/owsjff3260/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/owsjff3260/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/owsjff3260/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>神韵展现道德正向能量 佛罗伦萨文艺界敬佩</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/12/1912282328521528-600x400.jpg" />
 <h6>神韵2020季在意大利佛罗伦萨的演出广受欢迎，票房早就售罄。图为剧院外等候入场的观众排成长龙。（Mario Iacob／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2019年12月30日讯】（大纪元意大利佛罗伦萨记者站报导）<ahref="https://github.com/owsjff3260/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>艺术团在意大利佛罗伦萨的演出持续升温。2019年12月29日下午，<ahref="https://github.com/owsjff3260/djy/blob/master/gb/tag/%E4%BA%94%E6%9C%88%E9%9F%B3%E4%B9%90%E8%8A%82%E5%89%A7%E5%9C%BA.md#1">五月音乐节剧场</a>的第三场神韵演出继续爆满。流光溢彩的背景、博大深厚的精神内涵、卓越不凡的中国古典舞，令现场观众叹为观止。</p>
+	<p>【大纪元2019年12月30日讯】（大纪元意大利佛罗伦萨记者站报导）<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>艺术团在意大利佛罗伦萨的演出持续升温。2019年12月29日下午，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%BA%94%E6%9C%88%E9%9F%B3%E4%B9%90%E8%8A%82%E5%89%A7%E5%9C%BA.md#1">五月音乐节剧场</a>的第三场神韵演出继续爆满。流光溢彩的背景、博大深厚的精神内涵、卓越不凡的中国古典舞，令现场观众叹为观止。</p>
 <p>佛罗伦萨是世界著名的文化古城和艺术天堂，拉丁文Firenze是“繁花盛开”之意，她又被中国诗人冠以“翡冷翠”之名。这个蜚声几百年的艺术天堂，正像一块历经风雨的翡翠，拂去尘埃，依然晶莹灿烂。</p>
-<p>29日的演出也吸引了当地文艺界人士，其中意大利锡耶纳市艺术文化基金会的董事赞叹演出体现了“精神和道德”的价值，意大利演员Uberto Kovacevich认为<ahref="https://github.com/owsjff3260/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>完美无瑕，而作家Felicita Audisio则表示是法轮大法给了演员们力量。</p>
+<p>29日的演出也吸引了当地文艺界人士，其中意大利锡耶纳市艺术文化基金会的董事赞叹演出体现了“精神和道德”的价值，意大利演员Uberto Kovacevich认为<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>完美无瑕，而作家Felicita Audisio则表示是法轮大法给了演员们力量。</p>
 <h2>艺术文化基金会董事：神韵艺术家心怀正念</h2>
-<figure id="attachment_11753885" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/12/1912291256261973.jpg"><img class="wp-image-11753885 size-medium" src="https://i.epochtimes.com/assets/uploads/2019/12/1912291256261973-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">2019年12月29日，Claudio Ferrari先生与儿子观看了神韵在佛罗伦萨的演出。（麦蕾／大纪元）</figcaption></figure>
+<figure id="attachment_11753885" aria-describedby="caption-attachment-11753885" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/12/1912291256261973.jpg"><img class="wp-image-11753885 size-medium" src="https://i.epochtimes.com/assets/uploads/2019/12/1912291256261973-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-11753885" class="wp-caption-text">2019年12月29日，Claudio Ferrari先生与儿子观看了神韵在佛罗伦萨的演出。（麦蕾／大纪元）</figcaption></figure>
 <p>Claudio Ferrari先生是一家全国性节能公司的创始人兼总裁，也是“欧盟2020能源挑战视界委员会”的委员，该委员会负责在欧盟成员国之间分配节能资金。此外，他还担任意大利锡耶纳市艺术文化基金会的董事。</p>
 <p>Ferrari对神韵舞台背景赞不绝口，同时表示神韵的节目展现道德的正向能量，艺术家们带着正念而来。他说：“天幕背景简直美极了！对于我来说，每个节目的故事都与道德有关，令人心旷神怡。他们一定是带着很正的灵魂而来。”</p>
-<p>他认为中国和意大利传统文化有共同之处，那就是基于对神的信仰。“意大利的传统文化也是基于神，所以我认为<ahref="https://github.com/owsjff3260/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">中国传统文化</a>于此有紧密的联系，我可以感受到。”聆听神韵歌曲时他也有同样感受，“虽然听不懂中文，但是看到字幕上的翻译，歌词蕴含着对<ahref="https://github.com/owsjff3260/djy/blob/master/gb/tag/%E5%88%9B%E4%B8%96%E4%B8%BB.md#1">创世主</a>的追寻，和我们所信仰的一样。”</p>
+<p>他认为中国和意大利传统文化有共同之处，那就是基于对神的信仰。“意大利的传统文化也是基于神，所以我认为<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">中国传统文化</a>于此有紧密的联系，我可以感受到。”聆听神韵歌曲时他也有同样感受，“虽然听不懂中文，但是看到字幕上的翻译，歌词蕴含着对<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%88%9B%E4%B8%96%E4%B8%BB.md#1">创世主</a>的追寻，和我们所信仰的一样。”</p>
 <p>Ferrari称赞神韵艺术家非常出色，得知他们修炼法轮大法、信仰“真、善、忍”时，他表示这种信仰对于现代社会很重要。他说：“当然非常重要，我们更多地需要‘真、善、忍’。”</p>
 <h2>神韵完美无瑕 意大利电影演员体会东方艺术</h2>
-<figure id="attachment_11753887" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/12/1912291344591973.jpg"><img class="wp-image-11753887 size-medium" src="https://i.epochtimes.com/assets/uploads/2019/12/1912291344591973-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">2019年12月29日，意大利演员Uberto Kovacevich在佛罗伦萨观看神韵。（Marco D’Ippolito／大纪元）</figcaption></figure>
+<figure id="attachment_11753887" aria-describedby="caption-attachment-11753887" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/12/1912291344591973.jpg"><img class="wp-image-11753887 size-medium" src="https://i.epochtimes.com/assets/uploads/2019/12/1912291344591973-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-11753887" class="wp-caption-text">2019年12月29日，意大利演员Uberto Kovacevich在佛罗伦萨观看神韵。（Marco D’Ippolito／大纪元）</figcaption></figure>
 <p>“我真的真的喜爱神韵！”看过演出，Uberto Kovacevich对神韵的赞美溢于言表，“辉煌美丽，色彩璀璨，我也非常喜欢（天幕）技术，完美无瑕！”他直呼：“感觉非常棒！”</p>
 <p>Uberto Kovacevich从70年代起，就一直参演多部电影、电视，同时也在戏剧院登台表演。神韵音乐也让Kovacevich很陶醉，“我喜欢这音乐，音乐家真棒！二胡和钢琴的演奏让我非常欣赏。”</p>
 <p>Kovacevich表示，虽然自己的表演与神韵是完全不同的艺术形式，但观看神韵演出让他感到妙趣横生，他说神韵与自己看过的东方戏剧电影不同，“有些新颖，但又与我们的类似。”他从艺术形式上找到了中西方传统艺术的共同之处，“虽然这个艺术来自东方，但和我们的（艺术）很相似。”</p>
@@ -33,44 +33,43 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/owsjff3260/djy/blob/master/gb/19/12/28/n11751951.md#1">感悟神执掌人类 金融顾问观神韵深感荣幸</a></li>
-<li><a href="https://github.com/owsjff3260/djy/blob/master/gb/19/12/28/n11751965.md#1">色彩明丽内涵深厚 设计师赞神韵无与伦比</a></li>
-<li><a href="https://github.com/owsjff3260/djy/blob/master/gb/19/12/29/n11752012.md#1">赞叹千年神传文化 大型诊所老板对神韵倾心</a></li>
-<li><a href="https://github.com/owsjff3260/djy/blob/master/gb/19/12/29/n11752109.md#1">意大利老板一家观神韵 “感悟神的到来”</a></li>
-<li><a href="https://github.com/owsjff3260/djy/blob/master/gb/19/12/29/n11752198.md#1">神韵意大利爆满 银行家感悟应遵创世主安排</a></li>
-<li><a href="https://github.com/owsjff3260/djy/blob/master/gb/19/12/29/n11752229.md#1">神韵故事美妙 资深前外交官喜获神性启迪</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/12/28/n11751951.md#1">感悟神执掌人类 金融顾问观神韵深感荣幸</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/12/28/n11751965.md#1">色彩明丽内涵深厚 设计师赞神韵无与伦比</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/12/29/n11752012.md#1">赞叹千年神传文化 大型诊所老板对神韵倾心</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/12/29/n11752109.md#1">意大利老板一家观神韵 “感悟神的到来”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/12/29/n11752198.md#1">神韵意大利爆满 银行家感悟应遵创世主安排</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/12/29/n11752229.md#1">神韵故事美妙 资深前外交官喜获神性启迪</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/7/n10834918.md#1" target="_blank">曾伯炎：杀母红卫兵孔繁路的悲剧</a></li><li><a href="https://github.com/owsjff3260/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/28/n11415000.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（上）</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/2/n11629364.md#1" target="_blank">139号囚犯——红色影星赵丹的凄惨人生</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/12/11/n8581915.md#1" target="_blank">76岁中医求道40年终获至宝 发乌黑身如燕</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/13/n12684593.md#1">美国CIA解密大量UFO文件 网上可下载</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/5/n12667124.md#1">大疫将行 三指中共</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/20/9/29/n12439101.md#1">四岁儿子对妈妈说：我死过一次 很痛！</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/20/12/30/n12653733.md#1">【命理】有无富贵命怎看 二举人求功名为何丧命？</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12691126.md#1">【有冇搞错】马斯克建议人类“爱和宽容”</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/16/n12691801.md#1">【思想领袖】议员米勒：1月6日国会惊魂</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/11/n12681201.md#1">【珍言真语】姜嘉伟：外星人和UFO探秘</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/16/n12691519.md#1">【西岸观察】推特内部讲话外泄 称关更多账号</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/16/n12692722.md#1">中国疫情严重 河北廊坊等地出现“随地倒”</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12691080.md#1">刘嘉玲晒照为弟媳庆生 亿万财产或由侄子继承</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12691475.md#1">蚂蚁集团成立整改组 马云被指服软认错了</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12691080.md#1">刘嘉玲晒照为弟媳庆生 亿万财产或由侄子继承</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12691267.md#1">余苑绮少外食戒油炸仍罹癌 营养师点出关键</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12689631.md#1">【专访】王彩桦：心存善念 人生没有过不去的关卡</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12691425.md#1">59岁张学友近况曝光 胡须斑白双颊凹陷</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/16/n12691628.md#1">《末日激战》影评：机器人元素 让核武危机更有看点</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12689933.md#1">好疗愈 两只法斗犬与沙发撞衫 往上一趴就隐身</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/16/n12691636.md#1">【重播】洛杉矶停尸房告急 美国新变种严重吗？</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/13/n12685661.md#1">缺生长激素会长皱纹、掉发 这时间睡觉分泌最多</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/17/n12693215.md#1">“我不要治疗只要去台湾”马克杯网上出售</a></li>
-<li><a href="https://github.com/gxnqzo350/djy/blob/master/gb/21/1/15/n12689904.md#1">法国“已故”女子 努力证明自己还活着</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/owsjff3260/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/owsjff3260/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/12/30/n11753876.htm">神韵展现道德正向能量 佛罗伦萨文艺界敬佩</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/12/30/n11753876.htm">神韵展现道德正向能量 佛罗伦萨文艺界敬佩</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/owsjff3260/djy/blob/master/gb/19/12/30/n11753876.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/owsjff3260/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/owsjff3260/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/owsjff3260/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/owsjff3260/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/owsjff3260/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/19/12/30/n11753876.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
